<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.project</groupId>
    <artifactId>whatsapp-clone-root</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Whatsapp Clone Root</name>
    <description>Reference dependencies for whatsapp packages</description>
    <packaging>pom</packaging>
    <developers>
        <developer>
            <name>Mohamed Ahmed</name>
            <email>mohamed.ahmed04012000@gmail.com</email>
            <url>https://github.com/MohamedAhmed412000</url>
        </developer>
    </developers>

    <properties>
        <commons-lib.version>0.0.1</commons-lib.version>
        <java.version>17</java.version>
        <spring-boot.version>3.4.5</spring-boot.version>
        <jackson.version>2.18.3</jackson.version>
        <spring-cloud.version>2024.0.1</spring-cloud.version>
        <spring-doc.version>2.8.9</spring-doc.version>
        <spring-security.version>6.4.5</spring-security.version>
        <lombok.version>1.18.38</lombok.version>
        <json.version>20240303</json.version>
        <keycloak-core.version>26.1.3</keycloak-core.version>
        <keycloak-admin.version>26.0.6</keycloak-admin.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <cloudinary.version>2.3.0</cloudinary.version>
        <dotenv-java.version>2.2.4</dotenv-java.version>
        <spring-cloud-gateway-webflux.version>4.3.0-RC1</spring-cloud-gateway-webflux.version>
        <spring-grpc.version>0.10.0</spring-grpc.version>
        <jib.version>3.3.2</jib.version>
    </properties>

    <modules>
        <module>commons</module>
        <module>config-service</module>
        <module>discovery-service</module>
        <module>core</module>
        <module>core-ws</module>
        <module>media-management</module>
        <module>story-management</module>
        <module>user-management</module>
        <module>gateway-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Security BOM -->
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-bom</artifactId>
                <version>${spring-security.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring GRPC BOM -->
            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>${spring-grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Direct dependencies with versions (not BOMs) -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
                <version>${spring-cloud-gateway-webflux.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${spring-doc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${spring-doc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-admin-client</artifactId>
                <version>${keycloak-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-core</artifactId>
                <version>${keycloak-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudinary</groupId>
                <artifactId>cloudinary-http5</artifactId>
                <version>${cloudinary.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudinary</groupId>
                <artifactId>cloudinary-taglib</artifactId>
                <version>${cloudinary.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.cdimascio</groupId>
                <artifactId>dotenv-java</artifactId>
                <version>${dotenv-java.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Spring Boot Plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
